--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <Button
         android:id="@+id/signupButton"
         android:layout_width="347dp"
-        android:layout_height="80"
+        android:layout_height="80dp"
         android:layout_marginTop="64dp"
         android:layout_marginBottom="32dp"
         android:text="Sign Up"
@@ -17,15 +17,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.714" />
+        app:layout_constraintVertical_bias="0.714"
+        android:onClick="signup"/>
 
     <Button
         android:id="@+id/loginButton"
         android:layout_width="347dp"
-        android:layout_height="80"
+        android:layout_height="80dp"
         android:text="Login"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
-        app:layout_constraintStart_toStartOf="@+id/signupButton" />
+        app:layout_constraintStart_toStartOf="@+id/signupButton"
+        android:onClick="login"/>
 
     <TextView
         android:id="@+id/textView2"
